--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Hypertext Concrete Poem Example</title>
+        <title>Pablo Neruda</title>
 
         <!--This is a link to the css style sheet where you can make styling rules that will be applied to all pages-->
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="../css/style.css">
 
     </head>
     <body>
@@ -14,6 +14,10 @@
             <h1 class="title">
                 Tonight I Can Write <a href="./sadness" class="sadness">The_Saddest_Lines</a> 
             </h1>
+
+            <p>
+                By Pablo Neruda
+            </p>
         </div>
 
     </body>
