--- a/sadness/index.html
+++ b/sadness/index.html
@@ -12,8 +12,11 @@
 
         <div class="centered-wrapper">
             <h1>
-                an excerpt <a href="../excerpt/">...</a>
+                Write, for example,  'The <a href="../night_1/">night</a>  is shattered and the blue stars shiver in the distance.'
             </h1>
+            <h2>
+                The <a href="../">night</a> wind revolves in the sky and sings.
+            </h2>
         </div>
 
     </body>
