--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Pablo Neruda</title>
 
         <!--This is a link to the css style sheet where you can make styling rules that will be applied to all pages-->
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="./css/style.css">
 
     </head>
     <body>
